search page - add hero image, fix z-index of page layers

--- a/src/styles/markdown-content.scss
+++ b/src/styles/markdown-content.scss
@@ -12,4 +12,7 @@
     margin-top: rem(48px);
     margin-bottom: rem(16px);
   }
+  p {
+    margin-bottom: rem(16px);
+  }
 }
